[package]
name = "budget-management-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.1", features = ["postgres", "time", "chrono", "runtime-tokio-rustls", "tls-native-tls"] }
dotenv = "0.15"
env_logger = "0.10"
time = {version = "0.3", features = ["serde"] }